--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,20 @@ plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.11.2'
 }
-
+allure {
+    report {
+        version.set("2.27.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjVersion.set("1.9.22")
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.27.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
+}
 repositories {
     mavenCentral()
 }
@@ -11,7 +24,6 @@ dependencies {
     testImplementation(
             'com.codeborne:selenide:7.2.3',
             'org.junit.jupiter:junit-jupiter:5.10.2',
-            'com.github.javafaker:javafaker:1.0.2',
             'org.slf4j:slf4j-simple:2.0.7',
             'io.qameta.allure:allure-selenide:2.27.0',
             'org.assertj:assertj-core:3.25.3'
